# fantasy-football-tool

./: Cargo.toml  README.md
project/: Cargo.toml  documentation.txt
project/src/: main.rs
project/src/json/: mod.rs  my_structs.rs
project/src/my_errors/: mod.rs  my_errors.rs
project/src/query/: betting.rs  fantasy.rs  mod.rs  players.rs  schedule.rs  teams.rs
project/templates/: test2.html.tera
week1/src/: main.rs
