[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["tls", "mtls", "json", "secrets"] }
lazy_static = "1.4.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.11", features = ["json"]}
tokio = {version= "1", features = ["full"]}

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]